added the sign in with supabase + google auth

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.16",
     "cra-template-pwa": "2.0.0",
     "formik": "^2.4.6",
