--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.3",
