--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.89",
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.16",
     "cra-template-pwa": "2.0.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.4",
+    "gsap": "^3.13.0",
     "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-lottie": "^1.2.10",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.3",
+    "three": "^0.176.0",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
   },
