Website homepage refined

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.89",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.16",
     "cra-template-pwa": "2.0.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.11.0",
     "gsap": "^3.13.0",
     "postcss": "^8.4.31",
     "react": "^19.1.0",
