--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/three": "^0.176.0",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.1",
     "cra-template-pwa": "2.0.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.11.0",
+    "framer-motion": "^12.17.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.514.0",
     "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
